change about me

--- a/index.html
+++ b/index.html
@@ -568,11 +568,10 @@
                 Hello! I'm Daniel Long, i am currently a college student developing and improving my portfolio. 
             </p>
              <p class="mb-10 text-lg">
-                This section is dedicated to my biography, skills, and professional journey. I aim to continuously improve my skills in web development, design, and 3D visualization.
             </p>
-             <p class="mt-10 text-lg">More content...</p>
-             <p class="mt-10 text-lg" style="min-height: 50vh;">More content to make it scroll slightly...</p> 
-             <p class="mt-10 text-lg">Bottom of the About Me section.</p>
+             <p class="mt-10 text-lg"></p>
+             <p class="mt-10 text-lg" style="min-height: 50vh;"></p> 
+             <p class="mt-10 text-lg"></p>
              <!-- NEW: Copyright Footer -->
              <div class="copyright-footer">
                 &copy; 2025 Daniel's Project. All rights reserved.
