--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
             </h1>
             <!-- RESTORED span to subtitle -->
             <p class="max-w-xs mt-4 text-lg font-medium">
-                Still a beginner at coding, this project consists of 
+                Vibe coding, this project are mainly coded by Gemini AI and it consists of 
                 <span id="anime-text-target" class="font-bold"></span> 
             </p>
             <!-- Timezone and Weather Info -->
