--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
     <!-- === START: LINK PREVIEW / SOCIAL EMBED TAGS === -->
     <!-- This is the general description for search engines -->
-    <meta name="description" content="An interactive 3D portfolio showcasing web development skills, personal projects, and contact information.">
+    <meta name="description" content="Daniel's Project Portfolio">
     
     <!-- Open Graph (OG) tags (for Facebook, Discord, LinkedIn, etc.) -->
     <meta property="og:title" content="Daniel's Project Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="An interactive 3D portfolio showcasing web development skills, personal projects, and contact information." />
+    <meta property="og:description" content="Daniel's Project Porfolio" />
     <!-- 
       IMPORTANT: Replace this with the final, public URL of your website.
       (e.g., https://your-username.github.io/your-repo/) 
