fix embed again

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Twitter Card tags (for Twitter/X) -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Daniel's Project Portfolio">
-    <meta name="twitter:description" content="An interactive 3D portfolio showcasing web development skills, personal projects, and contact information.">
+    <meta name="twitter:description" content="Daniel's Project Porfolio">
     <meta name="twitter:image" content="https://raw.githubusercontent.com/itzmedaniel/website/main/favicon_io/apple-touch-icon.png">
     <!-- === END: LINK PREVIEW / SOCIAL EMBED TAGS === -->
     
