--- a/index.html
+++ b/index.html
@@ -140,13 +140,13 @@
 
         /* Theme toggle button styling */
         .theme-btn {
-            padding: 4px 10px;
-            border-radius: 6px;
-            font-size: 0.75rem;
+            padding: 2px 6px;
+            border-radius: 3px;
+            font-size: 0.6rem;
             font-weight: 600;
             cursor: pointer;
             transition: background-color 0.2s, color 0.2s;
-            border: 2px solid transparent;
+            border: 1px solid transparent;
         }
         
         /* Light mode toggle */
@@ -1119,39 +1119,39 @@
         </div>
 
         <!-- NAVIGATION BOX (BOTTOM RIGHT) -->
-        <div id="directory-box" class="absolute z-20 w-64 p-4 rounded-lg text-container legend-box bottom-16 right-8 md:right-16 lg:right-32">
-            <h2 id="directory-handle" class="flex items-center justify-between mb-3 text-sm font-bold cursor-grab active:cursor-grabbing">
+        <div id="directory-box" class="absolute z-20 w-40 p-2 rounded-lg text-container legend-box left-8 md:left-16 lg:left-32" style="top: 540px;">
+            <h2 id="directory-handle" class="flex items-center justify-between mb-1.5 text-xs font-bold cursor-grab active:cursor-grabbing">
                 <span>Directory</span>
-                <button id="drag-lock-btn" class="p-1 text-gray-500 rounded-full dark:text-gray-400 hover:bg-gray-200 dark:hover:bg-gray-600" title="Toggle drag lock">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <button id="drag-lock-btn" class="p-0.5 text-gray-500 rounded-full dark:text-gray-400 hover:bg-gray-200 dark:hover:bg-gray-600" title="Toggle drag lock">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-2.5 h-2.5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                         <path id="lock-icon-path" stroke-linecap="round" stroke-linejoin="round" d="M18 9V7a4 4 0 00-8 0v2m8 0H6a2 2 0 00-2 2v6a2 2 0 002 2h12a2 2 0 002-2v-6a2 2 0 00-2-2z"></path>
                     </svg>
                 </button>
             </h2>
 
             <!-- Links -->
-            <div class="flex flex-col space-y-2">
-                <button id="about-me-link" class="flex items-center p-2 text-lg font-semibold text-left transition-colors rounded-md nav-link">
-                    <span class="w-2 h-2 mr-3 bg-blue-500 rounded-full dot"></span>
+            <div class="flex flex-col space-y-1">
+                <button id="about-me-link" class="flex items-center p-1 text-xs font-semibold text-left transition-colors rounded-md nav-link">
+                    <span class="w-1.5 h-1.5 mr-1.5 bg-blue-500 rounded-full dot"></span>
                     About Me
                 </button>
-                <button id="project-link" class="flex items-center p-2 text-lg font-semibold text-left transition-colors rounded-md nav-link">
-                    <span class="w-2 h-2 mr-3 bg-orange-500 rounded-full dot"></span>
+                <button id="project-link" class="flex items-center p-1 text-xs font-semibold text-left transition-colors rounded-md nav-link">
+                    <span class="w-1.5 h-1.5 mr-1.5 bg-orange-500 rounded-full dot"></span>
                     Project
                 </button>
-                <button id="contact-link" class="flex items-center p-2 text-lg font-semibold text-left transition-colors rounded-md nav-link">
-                    <span class="w-2 h-2 mr-3 bg-green-500 rounded-full dot"></span>
+                <button id="contact-link" class="flex items-center p-1 text-xs font-semibold text-left transition-colors rounded-md nav-link">
+                    <span class="w-1.5 h-1.5 mr-1.5 bg-green-500 rounded-full dot"></span>
                     Contact
                 </button>
-                <button id="reference-link" class="flex items-center p-2 text-lg font-semibold text-left transition-colors rounded-md nav-link">
-                    <span class="w-2 h-2 mr-3 bg-purple-500 rounded-full dot"></span>
+                <button id="reference-link" class="flex items-center p-1 text-xs font-semibold text-left transition-colors rounded-md nav-link">
+                    <span class="w-1.5 h-1.5 mr-1.5 bg-purple-500 rounded-full dot"></span>
                     Reference
                 </button>
             </div>
 
             <!-- THEME TOGGLE -->
-            <div class="pt-3 mt-3 border-t border-gray-200 dark:border-gray-600">
-                <h3 class="mb-2 text-sm font-bold">Theme</h3>
+            <div class="pt-1.5 mt-1.5 border-t border-gray-200 dark:border-gray-600">
+                <h3 class="mb-1 text-xs font-bold">Theme</h3>
                 <div class="flex justify-between space-x-1">
                     <button id="theme-light" class="theme-btn">Light</button>
                     <button id="theme-dark" class="theme-btn">Dark</button>
