--- a/index.html
+++ b/index.html
@@ -1775,7 +1775,7 @@
             </h1>
             <!-- RESTORED span to subtitle -->
             <p class="max-w-xs mt-4 text-lg font-medium">
-                Vibe coding, this project are mainly coded by Gemini AI and it consists of 
+                Built with  
                 <span id="anime-text-target" class="font-bold"></span> 
             </p>
             <!-- Timezone and Weather Info -->
